# ROS2_1

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/pkg_1/share/pkg_1/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/pkg_1/: package.xml  setup.cfg  setup.py
src/pkg_1/urdf/: my_robot.urdf
