<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pkg_1</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rebornin3d@gmail.com">florin</maintainer>
  <license>TODO: License declaration</license>

  <!-- Add build and runtime dependencies here -->
  <depend>ament_cmake</depend> <!-- Required for ROS 2 packages -->
  <!-- Add other build and runtime dependencies as needed -->
  <!-- For Python packages, you can list Python dependencies as well -->
  <!-- For example:
  <depend>some_ros2_dependency</depend>
  <depend>another_ros2_dependency</depend>
  <depend>python_dependency</depend>
  -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
